--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,8 @@
     = javascript_importmap_tags
   %body{class: 'flex h-screen bg-gray-50 overflow-hidden'}
     = render partial: 'shared/sidebar'
-    %main{class: 'h-full overflow-y-auto'}
+    %main{class: 'h-full flex-1 overflow-y-auto'}
+      = render partial: 'shared/top_header'
       = render partial: 'shared/flash'
       %div{class: 'container grid px-6 mx-auto'}
         = yield
