--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,6 +19,6 @@
     = render partial: 'shared/sidebar'
     %main{class: 'h-full flex-1 overflow-y-auto'}
       = render partial: 'shared/top_header' if current_user
-      = render partial: 'shared/flash'
-      %div{class: 'container grid px-6 mx-auto'}
+      = render partial: 'shared/flash' if flash.any?
+      %div{class: 'container grid p-6 mx-auto'}
         = yield
