--- a/app/views/shared/_top_header.html.haml
+++ b/app/views/shared/_top_header.html.haml
@@ -1,4 +1,4 @@
-%header.flex.items-center.justify-between.px-6.py-4.bg-white.border-b.border-indigo-600.test-container
+%header{class: ' flex items-center justify-between px-6 py-4 bg-white border-b border-indigo-600/25 shadow-inner'}
   .items-center 
     %p= 'avatar'
   .items-center
