--- a/app/views/shared/_top_header.html.haml
+++ b/app/views/shared/_top_header.html.haml
@@ -1,5 +1,2 @@
-%header{class: ' flex items-center justify-between px-6 py-4 bg-white border-b border-indigo-600/25 shadow-inner'}
-  .items-center 
-    %p= 'avatar'
-  .items-center
-    = render partial: 'shared/top_header/log_container'
+%nav.navbar.bg-dark.d-flex.justify-content-end.px-4
+  = render partial: 'shared/top_header/log_container'
