--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,19 +1,14 @@
 - if controller_name != 'sessions'
-  = link_to "Se connecter", new_session_path(resource_name), class: 'inline-block px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-600 rounded-lg hover:bg-indigo-500 hover:text-white text-center'
-  %br/
-- if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Nouveau compte", new_registration_path(resource_name), class: 'inline-block px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-600 rounded-lg hover:bg-indigo-500 hover:text-white text-center'
-  %br/
+  = link_to "Se connecter", new_session_path(resource_name), class: 'btn btn-outline-primary btn-sm'
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
-  = link_to "Mot de passe oublié", new_password_path(resource_name), class: 'inline-block px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-600 rounded-lg hover:bg-indigo-500 hover:text-white text-center'
-  %br/
-- if devise_mapping.confirmable? && controller_name != 'confirmations'
-  = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
-  %br/
-- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
-  = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: 'inline-block px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-600 rounded-lg hover:bg-indigo-500 hover:text-white text-center'
-  %br/
-- if devise_mapping.omniauthable?
-  - resource_class.omniauth_providers.each do |provider|
-    = button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false }
-    %br/
+  = link_to "Mot de passe oublié", new_password_path(resource_name), class: 'btn btn-outline-secondary btn-sm'
+- if devise_mapping.registerable? && controller_name != 'registrations'
+  = link_to "Nouveau compte", new_registration_path(resource_name), class: 'btn btn-primary btn-sm'
+
+-# - if devise_mapping.confirmable? && controller_name != 'confirmations'
+-#   = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name)
+-# - if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks'
+-#   = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: 'inline-block px-4 py-2 text-sm font-semibold text-indigo-600 border border-indigo-600 rounded-lg hover:bg-indigo-500 hover:text-white text-center'
+-# - if devise_mapping.omniauthable?
+-#   - resource_class.omniauth_providers.each do |provider|
+-#     = button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false }
