--- a/app/views/shared/top_header/_log_container.html.haml
+++ b/app/views/shared/top_header/_log_container.html.haml
@@ -1,2 +1,2 @@
-= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete}, class: 'inline-block px-4 py-2 text-sm font-semibold text-white bg-indigo-600 rounded-lg hover:bg-indigo-500' if current_user
+= link_to 'Logout', destroy_user_session_path, data: {turbo_method: :delete}, class: 'btn btn-primary btn-sm' if current_user
 
