add manage user by admin

--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -2,6 +2,7 @@
 @import "./component/variables";
 @import "./component/mixins";
 @import "./component/base";
+@import "./component/button";
 
 body {
   height: 100vh;
