--- a/app/components/icon_button_component.html.haml
+++ b/app/components/icon_button_component.html.haml
@@ -1,2 +1,2 @@
-= link_to @path, title: @title, class: 'btn-icon' do
+= link_to @path, title: @title, class: "btn-icon btn-xs #{@classes} ", data: @data do
   %i{class: @icon}
