--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -4,4 +4,7 @@
   %td= user.last_name
   %td= user.role.name
   %td
-    actions
+    .d-flex.justify-content-end.gap-3
+      = render ActiveButtonComponent.new(status: user.status , activate_action: activate_user_path(user) , deactivate_action: deactivate_user_path(user))
+      = render IconButtonComponent.new(title: 'Modifier', path: edit_user_path(user), icon: 'bi bi-pencil')
+      = render IconButtonComponent.new(title: 'Supprimer', path: user_path(user), icon: 'bi bi-trash text-danger ', delete: true)
