--- a/app/components/alert_component.html.haml
+++ b/app/components/alert_component.html.haml
@@ -1,3 +1,3 @@
-.alert.position-absolute.top-0.end-0.m-3.d-flex.align-items-center{ class: "alert-warning alert-dismissible fade show ", role: 'alert'}
+.alert.position-absolute.top-0.end-0.m-3.d-flex.align-items-center{ class: "#{@color} alert-dismissible fade show ", role: 'alert'}
   %p= @value
   %button.btn-close.pb-2{type: 'button', "aria-label" => "close", "data-bs-dismiss" => "alert"}
