add shared card header

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,5 @@
-.card 
-  .card-header
-    %h1.fs-3 Modifier l'utilisateur
+.card.col-lg-6.mx-auto
+  = render 'shared/card/card_header', title: 'Modifier Utilisateur'
   .card-body
     = simple_form_for @user, url: user_path(@user), data: {turbo: false} do |f|
       != render partial: 'form', locals: { f:f }
