--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,5 @@
-.card
-  .card-header 
-    %h1.fs-3 Nouvel Utilisateur
+.card.col-lg-6.mx-auto
+  =render 'shared/card/card_header', title: 'Nouvel Utilisateur'
   .card-body
     = simple_form_for @user, url: users_path, data: {turbo: false} do |f|
       != render partial: 'form', locals: { f:f }
