--- a/app/views/shared/_top_header.html.haml
+++ b/app/views/shared/_top_header.html.haml
@@ -1,2 +1,2 @@
 %nav.navbar.bg-dark.d-flex.justify-content-end.px-4
-  = render partial: 'shared/top_header/log_container'
+  = render 'shared/top_header/log_container'
