--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -2,4 +2,4 @@
   = render 'shared/card/card_header', title: 'Modifier Utilisateur'
   .card-body
     = simple_form_for @user, url: user_path(@user), data: {turbo: false} do |f|
-      != render partial: 'form', locals: { f:f }
+      != render 'form', f:f 
