--- a/app/views/vehicules/index.html.haml
+++ b/app/views/vehicules/index.html.haml
@@ -7,7 +7,8 @@
 
   .card.my-2 
     = render 'shared/card/card_header', title: 'Vehicules', header_cta: true do
-      = render IconButtonComponent.new(title: 'Ajouter', path: new_vehicule_path, icon: 'fas fa-plus')
+      - if can? :create, Vehicule
+        = render IconButtonComponent.new(title: 'Ajouter', path: new_vehicule_path, icon: 'fas fa-plus')
     .card-body 
       %table.table.table-striped.table-hover.align-middle
         %thead
