--- a/app/views/vehicules/edit.html.haml
+++ b/app/views/vehicules/edit.html.haml
@@ -1,6 +1,7 @@
 .container-fluid
   .card.col-lg-6.mx-auto
-    = render 'shared/card/card_header', title: 'Nouveau Véhicule'
+    = render 'shared/card/card_header', title: "Modifier #{@vehicule.name}"
     .card-body 
       = simple_form_for @vehicule, url: vehicule_path(@vehicule), data: {turbo: false} do |f|
         != render 'form',  f:f
+        
