--- a/app/views/vehicules/show.html.haml
+++ b/app/views/vehicules/show.html.haml
@@ -4,3 +4,9 @@
       - if can? :update, @vehicule
         = render IconButtonComponent.new(title: 'Modifier', path: edit_vehicule_path(@vehicule), icon: 'bi bi-pencil')
     .card-body
+      .d-flex
+        %h3 Locations
+        = render IconButtonComponent.new(title: 'Ajouter', path: new_location_path(@vehicule), icon: 'fas fa-plus')
+      .locations 
+        .row 
+          = render 'shared/locations/locations', locations: @vehicule.locations
