--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -3,6 +3,7 @@
 @import "./component/mixins";
 @import "./component/base";
 @import "./component/button";
+@import "./component/card";
 
 body {
   height: 100vh;
