--- a/app/views/shared/card/_card_header.html.haml
+++ b/app/views/shared/card/_card_header.html.haml
@@ -1,5 +1,9 @@
 .card-header 
   .d-flex.align-items-center.justify-content-between
-    %h1.fs-3= title
+    .d-flex.align-items-center.gap-2
+      - if local_assigns[:collapsible ]
+        %button.btn.btn-outline-secondary.btn-sm{data: {action: 'collapse#toggle', 'collapse-target': 'button'}}
+          %i{class: "fas #{start_collapse_icon}", data: {'collapse-target': 'icon'} } 
+      %h1.fs-3= title
     - if local_assigns[:header_cta]
       = yield
